(include_subdirs qualified)

(env (_ (env-vars (INSIDE_DUNE "1"))))

(coq.theory
 (name CraneTestsWIP)
 (synopsis "Tests for the rocq-crane plugin")
 (modules :standard) ; automatically includes all .v files in this directory
 (theories
   Stdlib
   Crane
   ITree Equations ExtLib Paco)
 (flags (:standard -output-directory ../../tests/wip)))



(subdir z_abs_min
 (rule
  (targets z_abs_min.t.exe)
  (deps ZAbsMin.vo z_abs_min.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} z_abs_min.t.exe z_abs_min.cpp z_abs_min.t.cpp)))
 (rule
  (alias runtest)
  (deps z_abs_min.t.exe)
  (action (run ./z_abs_min.t.exe))))

(subdir z_arith_overflow
 (rule
  (targets z_arith_overflow.t.exe)
  (deps ZArithOverflow.vo z_arith_overflow.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} z_arith_overflow.t.exe z_arith_overflow.cpp z_arith_overflow.t.cpp)))
 (rule
  (alias runtest)
  (deps z_arith_overflow.t.exe)
  (action (run ./z_arith_overflow.t.exe))))

(subdir z_div_min
 (rule
  (targets z_div_min.t.exe)
  (deps ZDivMin.vo z_div_min.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} z_div_min.t.exe z_div_min.cpp z_div_min.t.cpp)))
 (rule
  (alias runtest)
  (deps z_div_min.t.exe)
  (action (run ./z_div_min.t.exe))))

(subdir rocq_bug_3287
 (rule
  (targets rocq_bug_3287.t.exe)
  (deps RocqBug3287.vo rocq_bug_3287.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} rocq_bug_3287.t.exe rocq_bug_3287.cpp rocq_bug_3287.t.cpp)))
 (rule
  (alias runtest)
  (deps rocq_bug_3287.t.exe)
  (action (run ./rocq_bug_3287.t.exe))))

(subdir fibst_cofix_repro
 (rule
  (targets fibst_cofix_repro.t.exe)
  (deps FibstCofixRepro.vo fibst_cofix_repro.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} fibst_cofix_repro.t.exe fibst_cofix_repro.cpp fibst_cofix_repro.t.cpp)))
 (rule
  (alias runtest)
  (deps fibst_cofix_repro.t.exe)
  (action (run ./fibst_cofix_repro.t.exe))))

(subdir loopify_gap_nested_fix
 (rule
  (targets loopify_gap_nested_fix.t.exe)
  (deps LoopifyGapNestedFix.vo loopify_gap_nested_fix.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} loopify_gap_nested_fix.t.exe loopify_gap_nested_fix.cpp loopify_gap_nested_fix.t.cpp)))
 (rule
  (alias runtest)
  (deps loopify_gap_nested_fix.t.exe)
  (action (run ./loopify_gap_nested_fix.t.exe))))

(subdir loopify_gap_ackermann
 (rule
  (targets loopify_gap_ackermann.t.exe)
  (deps LoopifyGapAckermann.vo loopify_gap_ackermann.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} loopify_gap_ackermann.t.exe loopify_gap_ackermann.cpp loopify_gap_ackermann.t.cpp)))
 (rule
  (alias runtest)
  (deps loopify_gap_ackermann.t.exe)
  (action (run ./loopify_gap_ackermann.t.exe))))

(subdir grammar_tuple_record_cons
 (rule
  (targets grammar_tuple_record_cons.t.exe)
  (deps GrammarTupleRecordCons.vo grammar_tuple_record_cons.t.cpp (source_tree .))
  (action
   (run %{project_root}/scripts/compile-std.sh %{project_root} grammar_tuple_record_cons.t.exe grammar_tuple_record_cons.cpp grammar_tuple_record_cons.t.cpp)))
 (rule
  (alias runtest)
  (deps grammar_tuple_record_cons.t.exe)
  (action (run ./grammar_tuple_record_cons.t.exe))))
